--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -17,28 +17,28 @@
       href="<%= publicPath %>/manifest.json"
       crossorigin="use-credentials"
     />
-    <link rel="icon" href="<%= publicPath %>/favicon.ico" />
-    <link rel="shortcut icon" href="<%= publicPath %>/favicon.ico" />
+    <link rel="icon" href="<%= publicPath %>/really_great_tech_logo.jpeg" />
+    <link rel="shortcut icon" href="<%= publicPath %>/really_great_tech_logo.jpeg" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="<%= publicPath %>/apple-touch-icon.png"
+      href="<%= publicPath %>/really_great_tech_logo.jpeg"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="<%= publicPath %>/favicon-32x32.png"
+      href="<%= publicPath %>/really_great_tech_logo.jpeg"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="<%= publicPath %>/favicon-16x16.png"
+      href="<%= publicPath %>/really_great_tech_logo.jpeg"
     />
     <link
       rel="mask-icon"
-      href="<%= publicPath %>/safari-pinned-tab.svg"
+      href="<%= publicPath %>/really_great_tech_logo.jpeg"
       color="#5bbad5"
     />
     <title><%= config.getOptionalString('app.title') ?? 'Backstage' %></title>
